# rtdemo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/scenes/test/: untitled.mtl
assets/shaders/: common.hlsli  deferred_shading_p0.frag  deferred_shading_p0.frag.hlsl  deferred_shading_p0.vert  deferred_shading_p0.vert.hlsl  deferred_shading_p1.frag  deferred_shading_p1.frag.hlsl  deferred_shading_p1.vert  deferred_shading_p1.vert.hlsl  forward_shading.frag  forward_shading.frag.hlsl  forward_shading.vert  forward_shading.vert.hlsl  shadow_mapping_p0.frag.hlsl  shadow_mapping_p0.vert  shadow_mapping_p0.vert.hlsl  shadow_mapping_p1.frag  shadow_mapping_p1.frag.hlsl  shadow_mapping_p1.vert  shadow_mapping_p1.vert.hlsl  tiled_forward_shading_p0.vert  tiled_forward_shading_p1.comp  tiled_forward_shading_p2.frag  tiled_forward_shading_p2.vert  tiled_forward_shading_p3.frag  tiled_forward_shading_p3.vert
assets/shaders/deferred_shading/: common.hlsli  p0.frag.hlsl  p0.vert.hlsl  p1.frag.hlsl  p1.vert.hlsl
assets/shaders/detail/: types.hlsli
assets/shaders/forward_shading/: p0.frag.hlsl  p0.vert.hlsl
assets/shaders/shadow_mapping/: common.hlsli  p0.frag.hlsl  p0.vert.hlsl  p1.frag.hlsl  p1.vert.hlsl
assets/shaders/tiled_forward_shading/: common.hlsli  p0.frag.hlsl  p0.vert.hlsl  p1.comp.hlsl  p2.frag.hlsl  p2.vert.hlsl  p3.frag.hlsl  p3.vert.hlsl
assets/shaders/volumetric_fog/: common.hlsli  p0.comp.hlsl  p1.comp.hlsl  p2.frag.hlsl  p2.vert.hlsl  shadow.frag.hlsl  shadow.vert.hlsl
docs/: memo.md
include/rendering_techniques/: gui.hpp  scene.hpp  stable.hpp
include/rtdemo/: application.hpp  garie.hpp  gui.hpp  logging.hpp  managed.hpp  scene.hpp  technique.hpp  types.hpp  util.hpp
include/rtdemo/layout/: static_layout.hpp
include/rtdemo/scene/: scene.hpp  static_scene.hpp
include/rtdemo/tech/: deferred_shading.hpp  forward_shading.hpp  shadow_mapping.hpp  technique.hpp  tiled_forward_shading.hpp  volumetric_fog.hpp
include/rtdemo/tech/detail/: util.hpp
src/: application.cpp  forward_shading.cpp  gui.cpp  logging.cpp  main.cpp  scene.cpp  util.cpp
src/layout/: static_layout.cpp
src/scene/: static_scene.cpp
src/tech/: deferred_shading.cpp  forward_shading.cpp  shadow_mapping.cpp  tiled_forward_shading.cpp  volumetric_fog.cpp
src/tech/detail/: util.cpp
